--- a/updater.html
+++ b/updater.html
@@ -8,19 +8,22 @@
         overflow: hidden;
         width: 100%;
         /* background-color: rgb(7, 33, 81); */
-        margin: 0;
-        padding: 0;
+        margin: 0px;
+        padding: 0px;
         /* transform: scale(0.5); */
         /* transform-origin: top left; */
         border: none;
+        display: block;
       }
       html,
-      body {
+      body,
+      head {
         height: 100%;
         width: 100%;
-        margin: 0;
-        padding: 0;
+        margin: 0px;
+        padding: 0px;
         overflow: hidden;
+        border: none;
       }
     </style>
   </head>
